tests/lime/fail/tokens/label_rest/byte_34.wsa
jmp .l" .l": push 34
